<resources>
    <string name="app_name">AirA01c</string>
    <string name="title_home">Home</string>
    <string name="title_configuration">Olympus Air</string>
    <string name="title_tips">Tips</string>
    <string name="dummy">(Dummy)</string>
    <string name="blank"> </string>
    <string name="refresh">Refresh</string>
    <string name="about_gokigen">About</string>
    <string name="lbl_bluetooth_le">Bluetooth LE</string>
    <string name="lbl_bluetooth">Bluetooth</string>
    <string name="app_credit">OLYMPUS AIR A01 Maintenance App.\n   https://github.com/MRSa/GokigenOSDN_documents/blob/main/Applications/AirA01c/Readme.md</string>
    <string name="app_location">AirA01a</string>
    <string name="action_refresh">Refresh</string>
    <string name="finish_refresh">Finish refresh.</string>
    <string name="dialog_positive_execute">OK</string>
    <string name="dialog_negative_cancel">Cancel</string>
    <string name="dialog_button_close">Close</string>
    <string name="dialog_button_previous">Previous</string>
    <string name="dialog_button_proceed">Next</string>
    <string name="take_photo">Take Photo</string>
    <string name="permission_not_granted">Permissions not granted by the user.</string>
    <string name="capture_success">Photo capture succeeded: </string>
    <string name="dialog_confirm_title_output_log">Share debug log</string>
    <string name="dialog_confirm_message_output_log">Share the debug log, OK?</string>
    <string name="lbl_pass_code">Code: </string>
    <string name="hint_pass_code">(Pass code)</string>
    <string name="dialog_button_power_on">WAKE UP</string>
    <string name="lbl_paired_devices">Paired Devices:</string>
    <string name="lbl_ble_devices"> Devices:</string>
    <string name="ble_scan_start">Scanning </string>
    <string name="ble_scan_done"> Done.</string>
    <string name="ble_wake_start">Start </string>
    <string name="ble_wake_success">Done.</string>
    <string name="ble_connect_connected"> Connected</string>
    <string name="ble_connect_disconnected"> Disconnected</string>
    <string name="ble_no_connect_permission">The Bluetooth connect permission is not granted.</string>
    <string name="ble_wake_failure">Wake up failure.</string>
    <string name="ble_setting_is_off">Bluetooth is currently off.</string>
    <string name="ble_adapter_is_nothing">The Bluetooth scanner not available.</string>
    <string name="ble_target_is_empty">The bluetooth device name is empty.</string>
    <string name="ble_device_found">Found : </string>
    <string name="ble_control_is_limited_version">Bluetooth control is available from Android 5.0 (Lollipop) onwards.</string>
    <string name="ble_send_passcode"> send passcode </string>
    <string name="ble_recv_error"> Error </string>
    <string name="ble_recv_accept"> OK </string>
    <string name="ble_last_use">[Last Use]</string>
    <string name="pref_cat_gokigen">GOKIGEN</string>
    <string name="pref_instruction_manual">Instructions</string>
    <string name="pref_privacy_policy">Privacy Policy</string>
    <string name="pref_degug_info">Debug Information</string>
    <string name="pref_summary_debug_info">LogCat Information</string>
    <string name="pref_cat_application_control">App. Control</string>
    <string name="pref_exit_power_off">Exit Application</string>
    <string name="pref_summary_exit_power_off"> </string>
    <string name="pref_wifi_settings">WIFI Settings</string>
    <string name="pref_summary_wifi_settings"> </string>
    <string name="pref_cat_application_settings">App. Settings</string>
    <string name="camera_not_connected">Camera does not be connected.</string>
    <string name="camera_not_found">Not Found&#8230;</string>
    <string name="camera_connect_response_ng">Camera replies NG.</string>
    <string name="connect_camera_rejected">Camera rejected.</string>
    <string name="connect_start">start</string>
    <string name="connect_check_wifi">check WIFI</string>
    <string name="connect_connect">connecting</string>
    <string name="connect_connecting">connecting&#8230;</string>
    <string name="connect_connected">connected</string>
    <string name="connect_connect_finished">connect finished.</string>
    <string name="connect_change_run_mode">changeRunMode</string>
    <string name="connect_restore_camera_settings">restoreCameraSettings</string>
    <string name="connect_camera_detected">Detected a camera</string>
    <string name="connect_camera_search_request">Camera Search</string>
    <string name="connect_camera_found">Found a camera</string>
    <string name="connect_camera_wait_reply">Wait reply from a camera</string>
    <string name="connect_camera_received_reply">Received reply from a camera</string>
    <string name="connect_receive_unknown_message">Received a unknown message.</string>
    <string name="dialog_title_exit_application">Exit Application</string>
    <string name="dialog_message_exit_application">Exit Application</string>
    <string name="dialog_title_connect_failed">Connect failed.</string>
    <string name="dialog_button_retry">Retry</string>
    <string name="dialog_button_network_settings">WiFi Settings</string>
    <string name="dialog_title_confirmation">Confirmation</string>
    <string name="dialog_message_power_off">Power Off</string>
    <string name="dialog_message_exit">Exit Application</string>
    <string name="command_line_disconnected">Camera control line is disconnected.</string>
    <string name="faq_title_00">Names of Parts</string>
    <string name="faq_question_00">What are the names of each part?</string>
    <string name="faq_answer_00">Names of each part are shown below.</string>
    <string name="faq_title_01">Charge Problem</string>
    <string name="faq_question_01">Battery does not get charged.</string>
    <string name="faq_answer_01">Please turn off the power of the Olympus Air before charging.</string>
    <string name="faq_title_02">Blinking LED</string>
    <string name="faq_question_02">LED is blinking (blue or green) when video is not being recorded.</string>
    <string name="faq_answer_02">Battery is missing. Please charge.</string>
    <string name="faq_title_03">LED flashing slowly</string>
    <string name="faq_question_03">LED is flashing slowly in green.</string>
    <string name="faq_answer_03">It is in the sleep mode. It will return to the sleep mode when any operation is performed. If left unattended, the power will automatically turn off.</string>
    <string name="faq_title_04">System time setting</string>
    <string name="faq_question_04">How do I set the clock on the Olympus Air?</string>
    <string name="faq_answer_04">Please use this application of the TIME SYNC button.</string>
    <string name="faq_title_05">Take pictures/videos problem</string>
    <string name="faq_question_05">I cannot shoot sequentially or shoot videos.</string>
    <string name="faq_answer_05">You can use sequential shooting or video shooting only when you have set the save destination set to the microSD card in the Olympus Air. Please set save destination to microSD card of the Olympus Air in the settings screen of a dedicated app.</string>
    <string name="faq_title_06">WiFi Setting</string>
    <string name="faq_question_06">Where is the WiFi settings?</string>
    <string name="faq_answer_06">The WiFi settings and the physical radio wave ON/OFF switch are listed on the back cover of the Olympus Air.</string>
    <string name="faq_title_07">Reset the network settings</string>
    <string name="faq_question_07">I want to return the network settings to the state at the time of purchase (I forgot the network connection settings).</string>
    <string name="faq_answer_07">Please operate the following with the power off and microSD card removed.\n\n 1. Push the power button briefly with the shutter button pressed all the way down and the lens release lever pulled all the way.\n\n 2. Once the power goed on, it will automatically turn off.\n\n 3. Again, turn the power on and you can use the network settings in the state at the time of purchase.</string>
    <string name="faq_title_08">Third party software is not connected to the Olympus Air.</string>
    <string name="faq_question_08">Error occurs when a third party software tries to connect to the Olympus Air.</string>
    <string name="faq_answer_08">The internal state of the SDK may be inconsistent with the internal state of the camera.\nPlease initialize the camera mode with this application and try connecting again, or restart the Olympus Air by pressing and holding the power button for more than 8 seconds.</string>
    <string name="faq_title_09">Reboot operation</string>
    <string name="faq_question_09">Although the Olympus Air is on, the controls do not work.</string>
    <string name="faq_answer_09">Please press down on the power button for about 8 seconds and the Olympus Air will reboot.</string>
    <string name="faq_title_10">What does the LED lamp indications mean?</string>
    <string name="faq_question_10">What does the color and blinking of the LED next to the power button mean?</string>
    <string name="faq_answer_10">The LED lamp next to the power button indicates the status of the unit and the connection with the smartphone by color and by lighting or blinking.\n\n- Blue: Normal (no Wi-Fi connection)\n- Blinking blue: Recording to a card or taking a movie\n- Blue intermittent blinking: Low battery warning\n\n- Green: Normal status (Wi-Fi connected)\n- Blinking green: Recording to a card or recording a movie\n- Green intermittent blinking: Low battery warning\n- Blinking green slowly: Sleep mode (power-saving state)\n\n- Orange: No battery remaining or charging (lights off when charging is complete)\n- Blinking orange: Card is being read (when connected to a PC)\n- Blinking orange + beeping sound: Error occur\n</string>
    <string name="faq_title_11">The LED lamp blinks orange, a warning beep sounds, and I cannot take pictures.</string>
    <string name="faq_question_11">The LED lamp blinks in orange, a warning beep sounds, and I cannot take pictures. What could be the cause?</string>
    <string name="dialog_button_standalone">Standalone</string>
    <string name="dialog_button_rec">Shooting</string>
    <string name="dialog_button_playback">Playback</string>
    <string name="dialog_button_playback_maintenance">Maintenance</string>
    <string name="dialog_send_message">Send</string>
    <string name="http_http_url_string">http://192.168.0.10/</string>
    <string name="http_method_string">GET</string>
    <string name="http_command_string">get_camprop.cgi</string>
    <string name="http_dialog_http_url_hint">http://192.168.0.10/</string>
    <string name="http_dialog_method_hint">GET/POST/PUT</string>
    <string name="http_dialog_option_hint">(com=desc/get, required)</string>
    <string name="http_dialog_command_hint">(*.cgi, required)</string>
    <string name="http_dialog_parameter_hint">(propname=desclist, option)</string>
    <string name="http_dialog_body_hint">(Message body to send, option)</string>
    <string name="http_response_area_hint">(Received Data)</string>
    <string name="lbl_launch_app">Launch App.</string>
    <string name="btn_launch_app">Launch</string>
    <string name="lbl_launch_target">Application to launch : </string>
</resources>