<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:id="@+id/info_edit_data"
        style="?android:attr/buttonBarStyle"
        android:autofillHints=""
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:padding="6dp">

        <LinearLayout
            android:id="@+id/mode_change_button_area"
            style="?android:attr/buttonBarButtonStyle"
            android:orientation="horizontal"
            android:layout_gravity="center_horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:padding="4dp">

            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginStart="2dp"
                android:layout_marginLeft="2dp"
                android:layout_marginEnd="2dp"
                android:layout_marginRight="2dp"
                android:tag="button"
                android:gravity="center"
                android:id="@+id/change_to_standalone"
                android:text="@string/dialog_button_standalone"
                android:visibility="visible"
                android:textSize="14sp"
                android:maxWidth="310dp"
                />

            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginStart="2dp"
                android:layout_marginLeft="2dp"
                android:layout_marginEnd="2dp"
                android:layout_marginRight="2dp"
                android:tag="button"
                android:gravity="center"
                android:id="@+id/change_to_rec"
                android:text="@string/dialog_button_rec"
                android:visibility="visible"
                android:textSize="14sp"
                android:maxWidth="310dp"
                />

            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginStart="2dp"
                android:layout_marginLeft="2dp"
                android:layout_marginEnd="2dp"
                android:layout_marginRight="2dp"
                android:tag="button"
                android:gravity="center"
                android:id="@+id/change_to_playback"
                android:text="@string/dialog_button_playback"
                android:visibility="visible"
                android:textSize="14sp"
                android:maxWidth="310dp"
                />

            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginStart="2dp"
                android:layout_marginLeft="2dp"
                android:layout_marginEnd="2dp"
                android:layout_marginRight="2dp"
                android:tag="button"
                android:gravity="center"
                android:id="@+id/change_to_playback_maintenance"
                android:text="@string/dialog_button_playback_maintenance"
                android:visibility="visible"
                android:textSize="14sp"
                android:maxWidth="310dp"
                />
        </LinearLayout>

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/method_name"
            android:importantForAutofill="no"
            android:tag="title"
            android:layout_gravity="start">
        </TextView>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:tag="button"
            android:layout_marginStart="4dp"
            android:layout_marginLeft="4dp"
            android:layout_marginEnd="4dp"
            android:layout_marginRight="4dp"
            android:minHeight="60dp"
            android:minWidth="60dp"
            android:id="@+id/send_message_button"
            android:text="@string/dialog_send_message"
            android:layout_gravity="center"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/edit_http_header"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:importantForAutofill="no"
            android:text="@string/http_http_url_string"
            android:hint="@string/http_dialog_http_url_hint"
            android:minHeight="50dp"
            android:minWidth="50dp"
            android:maxWidth="480dp"
            />

        <EditText
            android:id="@+id/edit_method"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:autoLink="all"
            android:linksClickable="true"
            android:importantForAutofill="no"
            android:inputType="text"
            android:hint="@string/http_dialog_method_hint"
            android:text="@string/http_method_string"
            android:minHeight="50dp"
            android:minWidth="50dp"
            android:maxWidth="480dp"
            />

        <EditText
            android:id="@+id/edit_command"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:autoLink="all"
            android:linksClickable="true"
            android:inputType="text"
            android:importantForAutofill="no"
            android:text="@string/http_command_string"
            android:hint="@string/http_dialog_command_hint"
            android:minHeight="50dp"
            android:minWidth="50dp"
            android:maxWidth="480dp"
            />

        <EditText
            android:id="@+id/edit_option"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:autoLink="all"
            android:linksClickable="true"
            android:inputType="text"
            android:importantForAutofill="no"
            android:hint="@string/http_dialog_option_hint"
            android:minHeight="50dp"
            android:minWidth="50dp"
            android:maxWidth="480dp"
            />

        <EditText
            android:id="@+id/edit_parameter"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:autoLink="all"
            android:linksClickable="true"
            android:inputType="textMultiLine"
            android:importantForAutofill="no"
            android:hint="@string/http_dialog_parameter_hint"
            android:minHeight="50dp"
            android:minWidth="50dp"
            android:maxWidth="480dp"
            />

        <EditText
            android:id="@+id/edit_body"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:autoLink="all"
            android:linksClickable="true"
            android:importantForAutofill="no"
            android:inputType="textMultiLine"
            android:hint="@string/http_dialog_body_hint"
            android:minHeight="50dp"
            android:minWidth="50dp"
            android:maxWidth="480dp"
            />

        <View
            android:layout_width="fill_parent"
            android:layout_height="2dp"
            android:background="@android:color/darker_gray"/>

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/omds_command_response_value"
            android:text="@string/http_response_area_hint"
            android:textColor="@color/teal_700"
            />

        <View
            android:layout_width="fill_parent"
            android:layout_height="2dp"
            android:background="@android:color/darker_gray"/>

    </LinearLayout>
</ScrollView>
